This commit changes a few things about the multi-select code. See GHE issue #606 for details on the bug. - Long tags will wrap while keeping the "X" 'close window' indicator in the upper right of the tag. - Short tags will behave similar to previous (the "X" 'close window' indicator will appear 10px after the text, down from 15px) - A negative right margin of -10px was added to the UL container so that long tags will align with the INPUT element below the tags - The "X" 'close window' indicator was changed from navy-20 to white to meet contrast accessibility standards

--- a/cfgov/unprocessed/css/molecules/multi-select.less
+++ b/cfgov/unprocessed/css/molecules/multi-select.less
@@ -80,27 +80,30 @@
     }
 
     &_choices {
+        margin-right: unit( -10px / @base-font-size-px, em );
         margin-bottom: 0;
 
         li {
             display: inline-block;
 
-            margin-right: unit( 15px / @base-font-size-px, em );
+            margin-right: unit( 10px / @base-font-size-px, em );
         }
 
         li:last-child {
-          margin-bottom: unit( 5px / @base-font-size-px, em );
+          margin-bottom: unit( 10px / @base-font-size-px, em );
         }
 
         label {
-            display: block;
+            display: inline-block;
             padding: 2px 5px;
+            padding-right: unit( 25px / 14px, em );
 
             background-color: @navy-80;
             border-radius: unit( 4px / @base-font-size-px, em );
             color: @white;
             cursor: pointer;
             font-size: unit( 14px / @base-font-size-px, em );
+            position: relative;
 
             &:hover {
                 background-color: @navy;
@@ -110,12 +113,14 @@
                 }
             }
 
-            &:after {
+            & span:after {
                 .cf-icon();
+                display: inline;
+                position: absolute;
+                top: 3px;
+                right: 5px;
 
-                margin-left: unit( 15px / 14px, em );
-
-                color: @navy-20;
+                color: @white;
                 content: @cf-icon-delete;
             }
         }
